--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ alembic==1.1.0
 Click==7.0
 dominate==2.4.0
 Flask==1.1.1
-Flask-Bootstrap==3.3.7.1
+Flask-Bootstrap4==4.0.2
 Flask-Login==0.4.1
 Flask-Migrate==2.5.2
 Flask-Moment==0.9.0
