--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,6 @@ Flask-Migrate==2.5.2
 Flask-Moment==0.9.0
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
-gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 Mako==1.1.0
@@ -21,3 +20,5 @@ SQLAlchemy==1.3.8
 visitor==0.1.3
 Werkzeug==0.15.6
 WTForms==2.2.1
+psycopg2==2.7.3.1
+gunicorn==19.7.1
